  plotting points and new symbol plugin with some predefined point
  types (sponsored by Utility Data Corporation).
- Resize plugin for automatically redrawing when the placeholder
  changes size, e.g. on window resizes (sponsored by Novus Partners).
- Support Infinity/-Infinity for plotting asymptotes by hacking it
  into +/-Number.MAX_VALUE (reported by rabaea.mircea).

- New hooks: drawSeries

Bug fixes:

- Fixed problem with findNearbyItem and bars on top of each other
  (reported by ragingchikn, issue 242).
- Fixed problem with ticks and the border (based on patch from
  ultimatehustler69, issue 236).
- Fixed problem with plugins adding options to the series objects.
- Fixed a problem introduced in 0.6 with specifying a gradient with {
  brightness: x, opacity: y }.
- Don't use $.browser.msie, check for getContext on the created canvas
  element instead and try to use excanvas if it's not found (fixes IE
  9 compatibility).
- highlight(s, index) was looking up the point in the original s.data
  instead of in the computed datapoints array, which breaks with
  plugins that modify the datapoints (such as the stacking plugin).
  Issue 316 reported by curlypaul924.
- More robust handling of axis from data passed in from getData()
  (problem reported by Morgan).
- Fixed problem with turning off bar outline (issue 253, fix by Jordi
  Castells).
- Check the selection passed into setSelection in the selection
  plugin, to guard against errors when synchronizing plots (fix by Lau
  Bech Lauritzen).
- Fix bug in crosshair code with mouseout resetting the crosshair even
  if it is locked (fix by Lau Bech Lauritzen and Banko Adam).
- Fix bug with points plotting using line width from lines rather than
  points.
- Fix bug with passing non-array 0 data (for plugins that don't expect
  arrays, patch by vpapp1).
- Fix errors in JSON in examples so they work with jQuery 1.4.2
  (fix reported by honestbleeps, issue 357).